0.5.1: (Future)
Bugfixes:
 - GB MBC: Fix MBC7 when size is incorrectly specified
 - GB Video: Setting LYC=LY during mode 2 should trigger an IRQ
 - GBA Cheats: Fix holding onto pointers that may get invalidated
 - Qt: Fix "close" button on Overrides view
 - Qt: Fix saving overrides
 - FFmpeg: Fix encoding AAC
Misc:
 - All: Only update version info if needed

0.5.0: (2016-09-19)
Features:
 - Game Boy support
 - Support for encrypted CodeBreaker GBA cheats
 - Emulation of Vast Fame protected GBA carts (taizou)
 - Tile viewer
 - Threaded rendering mode
 - Libretro: Memory map and achievement support (leiradel)
 - GUI: Add UI control remapping
 - GUI: Add fast-forward
 - Wii: 240p support
 - 3DS: Adjustable screen darkening
 - Ability to temporarily load a savegame
 - Load specific files out of archives
 - Automatic BIOS detection
Bugfixes:
 - ARM7: Fix decoding of Thumb ADD (variants 5 and 6)
 - Debugger: Fix GDB breakpoints
 - GBA: Fix losing IRQs when CPSR I bit isn't cleared
 - GBA: Fix filehandle leak with savegames
 - GBA: Timer 0 cannot be count up
 - GBA: Count up timers should not count themselves
 - GBA Memory: Fix mirror on non-overdumped Classic NES games
 - GBA Memory: Fix ldm {pc}
 - GBA Savedata: Fix savedata sync timer
 - GBA Savedata: Only unmap savedata if present
 - GBA Serialize: Savestates now properly store prefetch
 - GBA Video: WIN0/1 take priority over OBJWIN
 - GBA Video: Fix out-of-order OBJWIN
 - PSP2: Fix GPU crash while exiting
 - PSP2: Fix VSync
 - PSP2: Fix accelerometer range
 - PSP2: Actually load screen mode setting
 - PSP2: Fix gyroscope direction
 - PSP2: Delete threads after they return
 - PSP2: Fix mapping/unmapping from not at 0
 - Qt: Fix bug in software renderer scaling
 - Qt: Fix hanging key press after disabling autofire
 - Qt: Fix being unable to pause manually when using auto-pausing
 - SDL: Fix axes being mapped wrong
 - Util: Fix realloc semantics in utf16to8
 - Util: Fix inserting too many items into a hash table